feat: add note to end of notebook

--- a/AI Large Cellular Models/hands-on-2.ipynb
+++ b/AI Large Cellular Models/hands-on-2.ipynb
@@ -4466,7 +4466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7e86a268",
    "metadata": {
     "execution": {
@@ -4502,44 +4502,56 @@
    ],
    "source": [
     "# - Set the gene co expression network (green graph)\n",
-    "if gears_model.config['G_coexpress'] is None:\n",
+    "if gears_model.config['G_coexpress'] is None:  # If the co-expression graph is not already set\n",
     "    ## calculating co expression similarity graph\n",
-    "    edge_list = get_similarity_network(network_type='co-express',\n",
-    "                                        adata=gears_model.adata,\n",
-    "                                        threshold=gears_model.config['coexpress_threshold'],\n",
-    "                                        k=gears_model.config['num_similar_genes_co_express_graph'],\n",
-    "                                        data_path=gears_model.data_path,\n",
-    "                                        data_name=gears_model.dataset_name,\n",
-    "                                        split=gears_model.split, seed=gears_model.seed,\n",
-    "                                        train_gene_set_size=gears_model.train_gene_set_size,\n",
-    "                                        set2conditions=gears_model.set2conditions)\n",
+    "    edge_list = get_similarity_network(         # Compute the gene co-expression similarity network\n",
+    "        network_type='co-express',              # Specify the network type as co-expression\n",
+    "        adata=gears_model.adata,                # Pass the AnnData object with gene expression data\n",
+    "        threshold=gears_model.config['coexpress_threshold'],  # Threshold for edge creation in the graph\n",
+    "        k=gears_model.config['num_similar_genes_co_express_graph'],  # Number of similar genes to connect\n",
+    "        data_path=gears_model.data_path,        # Path to the data directory\n",
+    "        data_name=gears_model.dataset_name,     # Name of the dataset\n",
+    "        split=gears_model.split, seed=gears_model.seed,  # Data split and random seed for reproducibility\n",
+    "        train_gene_set_size=gears_model.train_gene_set_size,  # Size of the training gene set\n",
+    "        set2conditions=gears_model.set2conditions           # Mapping from gene sets to experimental conditions\n",
+    "    )\n",
     "\n",
-    "    sim_network = GeneSimNetwork(edge_list, gears_model.gene_list, node_map = gears_model.node_map)\n",
-    "    gears_model.config['G_coexpress'] = sim_network.edge_index\n",
-    "    gears_model.config['G_coexpress_weight'] = sim_network.edge_weight\n",
+    "    sim_network = GeneSimNetwork(               # Create a GeneSimNetwork object from the edge list\n",
+    "        edge_list,                             # The computed edge list\n",
+    "        gears_model.gene_list,                 # List of genes (nodes) in the graph\n",
+    "        node_map=gears_model.node_map          # Mapping from gene names to node indices\n",
+    "    )\n",
+    "    gears_model.config['G_coexpress'] = sim_network.edge_index      # Store the edge indices in the config\n",
+    "    gears_model.config['G_coexpress_weight'] = sim_network.edge_weight  # Store the edge weights in the config\n",
     "\n",
     "# - Set the gene ontology network (red graph)\n",
-    "if gears_model.config['G_go'] is None:\n",
+    "if gears_model.config['G_go'] is None:  # If the gene ontology (GO) graph is not already set\n",
     "    ## calculating gene ontology similarity graph\n",
-    "    edge_list = get_similarity_network(network_type='go',\n",
-    "                                        adata=gears_model.adata,\n",
-    "                                        threshold=gears_model.config['coexpress_threshold'],\n",
-    "                                        k=gears_model.config['num_similar_genes_co_express_graph'],\n",
-    "                                        pert_list=gears_model.pert_list,\n",
-    "                                        data_path=gears_model.data_path,\n",
-    "                                        data_name=gears_model.dataset_name,\n",
-    "                                        split=gears_model.split, seed=gears_model.seed,\n",
-    "                                        train_gene_set_size=gears_model.train_gene_set_size,\n",
-    "                                        set2conditions=gears_model.set2conditions,\n",
-    "                                        default_pert_graph=gears_model.default_pert_graph)\n",
+    "    edge_list = get_similarity_network(         # Compute the gene ontology similarity network\n",
+    "        network_type='go',                      # Specify the network type as gene ontology\n",
+    "        adata=gears_model.adata,                # Pass the AnnData object\n",
+    "        threshold=gears_model.config['coexpress_threshold'],  # Threshold for edge creation\n",
+    "        k=gears_model.config['num_similar_genes_co_express_graph'],  # Number of similar genes to connect\n",
+    "        pert_list=gears_model.pert_list,        # List of perturbations (for GO graph)\n",
+    "        data_path=gears_model.data_path,        # Path to the data directory\n",
+    "        data_name=gears_model.dataset_name,     # Name of the dataset\n",
+    "        split=gears_model.split, seed=gears_model.seed,  # Data split and random seed\n",
+    "        train_gene_set_size=gears_model.train_gene_set_size,  # Size of the training gene set\n",
+    "        set2conditions=gears_model.set2conditions,            # Mapping from gene sets to conditions\n",
+    "        default_pert_graph=gears_model.default_pert_graph     # Default perturbation graph (if any)\n",
+    "    )\n",
     "\n",
-    "    sim_network = GeneSimNetwork(edge_list, gears_model.pert_list, node_map = gears_model.node_map_pert)\n",
-    "    gears_model.config['G_go'] = sim_network.edge_index\n",
-    "    gears_model.config['G_go_weight'] = sim_network.edge_weight\n",
+    "    sim_network = GeneSimNetwork(               # Create a GeneSimNetwork object for the GO graph\n",
+    "        edge_list,                             # The computed edge list\n",
+    "        gears_model.pert_list,                 # List of perturbations (nodes in GO graph)\n",
+    "        node_map=gears_model.node_map_pert     # Mapping from perturbation names to node indices\n",
+    "    )\n",
+    "    gears_model.config['G_go'] = sim_network.edge_index         # Store the edge indices in the config\n",
+    "    gears_model.config['G_go_weight'] = sim_network.edge_weight # Store the edge weights in the config\n",
     "\n",
     "# - finally obtain the model\n",
-    "gears_model.model = GEARS_Model(gears_model.config).to(gears_model.device)\n",
-    "gears_model.best_model = deepcopy(gears_model.model)"
+    "gears_model.model = GEARS_Model(gears_model.config).to(gears_model.device)  # Instantiate and move the model to the device (e.g., GPU)\n",
+    "gears_model.best_model = deepcopy(gears_model.model)                        # Save a copy as the best model so far"
    ]
   },
   {
@@ -4846,7 +4858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9fe9db4d",
    "metadata": {
     "execution": {
@@ -4866,33 +4878,52 @@
    },
    "outputs": [],
    "source": [
+    "# Define a dictionary mapping metric names to their corresponding functions\n",
     "metric2fct = {\n",
-    "    'pearson': pearsonr,\n",
-    "    'mse': mse,\n",
-    "    'mae': mae,\n",
-    "    'change_ratio': get_change_ratio,\n",
-    "    'spearman': spearmanr,  \n",
+    "    'pearson': pearsonr,           # Pearson correlation coefficient\n",
+    "    'mse': mse,                    # Mean squared error\n",
+    "    'mae': mae,                    # Mean absolute error\n",
+    "    'change_ratio': get_change_ratio,  # Custom function for change ratio\n",
+    "    'spearman': spearmanr,         # Spearman correlation coefficient\n",
     "}\n",
-    "name = 'DE_'\n",
-    "for prefix in list(de_idx_map.keys()): # ['top20', 'top50', 'top100']\n",
-    "    de_idx = de_idx_map[prefix]        # the gene index of ['top20', 'top50', 'top100'] DEGs\n",
-    "    for m, fct in metric2fct.items():\n",
-    "        if m == 'pearson' or m == 'spearman':\n",
-    "            val = fct(test_output['pred'][p_idx].mean(0)[de_idx] - ctrl[de_idx], test_output['truth'][p_idx].mean(0)[de_idx]-ctrl[de_idx])[0]\n",
-    "            if np.isnan(val):\n",
-    "                val = 0\n",
-    "            pert_metric[name + m + f'_delta_{prefix}'] = val\n",
+    "name = 'DE_'  # Prefix for metric names in the results dictionary\n",
     "\n",
-    "            val = fct(test_output['pred'][p_idx].mean(0)[de_idx], test_output['truth'][p_idx].mean(0)[de_idx])[0]\n",
+    "# Loop over each DEG set (e.g., 'top20', 'top50', 'top100')\n",
+    "for prefix in list(de_idx_map.keys()):  # de_idx_map contains indices for each DEG set\n",
+    "    de_idx = de_idx_map[prefix]         # Get the indices for the current DEG set\n",
+    "    for m, fct in metric2fct.items():   # Loop over each metric and its function\n",
+    "        if m == 'pearson' or m == 'spearman':\n",
+    "            # Calculate the metric on delta expression (perturbed - control)\n",
+    "            val = fct(\n",
+    "                test_output['pred'][p_idx].mean(0)[de_idx] - ctrl[de_idx],   # Predicted delta\n",
+    "                test_output['truth'][p_idx].mean(0)[de_idx] - ctrl[de_idx]   # True delta\n",
+    "            )[0]\n",
+    "            if np.isnan(val):  # Handle NaN results\n",
+    "                val = 0\n",
+    "            pert_metric[name + m + f'_delta_{prefix}'] = val  # Store delta metric\n",
+    "\n",
+    "            # Calculate the metric on raw predicted vs. true expression\n",
+    "            val = fct(\n",
+    "                test_output['pred'][p_idx].mean(0)[de_idx],    # Predicted expression\n",
+    "                test_output['truth'][p_idx].mean(0)[de_idx]    # True expression\n",
+    "            )[0]\n",
     "            if np.isnan(val):\n",
     "                val = 0\n",
-    "            pert_metric[name + m + f'_{prefix}'] = val\n",
+    "            pert_metric[name + m + f'_{prefix}'] = val         # Store raw metric\n",
     "        elif m == 'change_ratio':\n",
-    "            val = fct(test_output['pred'][p_idx].mean(0)[de_idx], test_output['truth'][p_idx].mean(0)[de_idx])\n",
+    "            # Calculate the change ratio metric (custom function)\n",
+    "            val = fct(\n",
+    "                test_output['pred'][p_idx].mean(0)[de_idx],\n",
+    "                test_output['truth'][p_idx].mean(0)[de_idx]\n",
+    "            )\n",
     "            pert_metric[name + m + f'_{prefix}'] = val\n",
     "        else:\n",
-    "            val = fct(test_output['pred'][p_idx].mean(0)[de_idx] - ctrl[de_idx], test_output['truth'][p_idx].mean(0)[de_idx]-ctrl[de_idx])\n",
-    "            pert_metric[name + m + f'_{prefix}'] = val"
+    "            # For mse and mae, calculate on delta expression (perturbed - control)\n",
+    "            val = fct(\n",
+    "                test_output['pred'][p_idx].mean(0)[de_idx] - ctrl[de_idx],\n",
+    "                test_output['truth'][p_idx].mean(0)[de_idx] - ctrl[de_idx]\n",
+    "            )\n",
+    "            pert_metric[name + m +"
    ]
   },
   {
@@ -4963,6 +4994,15 @@
    ],
    "source": [
     "pert_metric"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "660a2052",
+   "metadata": {},
+   "source": [
+    "### Only trained for 1 epoch so didn't get good results - can try running for more epochs\n",
+    "Can also change the training dataset"
    ]
   }
  ],
